# monitorbot

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  release.sh
.github/workflows/: pr-checks.yaml  release.yaml
src/: logging.rs  main.rs  params.rs
