[package]
name = "monitorbot"
version = "0.1.0"
authors = ["Daniel Parks <oss-monitorbot@demonhorse.org>"]
description = ""
homepage = "https://github.com/danielparks/monitorbot"
repository = "https://github.com/danielparks/monitorbot"
documentation = "https://github.com/danielparks/monitorbot"
readme = "README.md"
exclude = [".*", "/release.sh"]
keywords = []
categories = [] # https://crates.io/category_slugs
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.95"
bytes = { version = "1.10.1", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
encoding_rs = "0.8.35"
fast_html2md = { version = "0.0.48", features = ["scraper"] }
http = "1.3.1"
http-serde = "2.1.1"
mime = "0.3.17"
reqwest = { version = "0.12.22", default-features = false, features = ["http2", "rustls-tls", "charset", "gzip", "brotli", "zstd", "deflate", "system-proxy"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
termcolor = "1.4.1"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
url = { version = "2.5.4", features = ["serde"] }

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = "warn"

# Other restriction lints
arithmetic_side_effects = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
dbg_macro = "warn"
default_union_representation = "warn"
empty_structs_with_brackets = "warn"
filetype_is_file = "warn" # maybe?
fn_to_numeric_cast_any = "warn"
format_push_string = "warn" # maybe? alternative is fallible.
get_unwrap = "warn"
impl_trait_in_params = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"

# Pedantic exceptions
let_underscore_untyped = "allow"
manual_string_new = "allow"
map_unwrap_or = "allow"
module_name_repetitions = "allow"

# Nursery exceptions
option_if_let_else = "allow"

[dev-dependencies]
assert2 = "0.3.15"
